crates/data-dict/tests/snapshots/validate_data__nulls_in_required_column_reported.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    columns:
      - name: weight
        type: number(quantity)
        constraints: [required]
        range: [0, 100]
────────────────────────────────────────
error[D01]: A required column must not contain nulls.
  --> dict.yaml:10:23
   |
LL |   - name: t
...
LL |       - name: weight
LL |         type: number(quantity)
LL |         constraints: [required]
   |                       ^^^^^^^^ has 1 null value
